--- a/Ranya01/AssignmentG5.html
+++ b/Ranya01/AssignmentG5.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<div id="bla" class="dropdown">
+<div class="dropdown">
     <button class="dropbtn">About Us</button>
         <div class="dropdown-content">
             <a style="text-decoration: none; color:red;" href="#">Team</a>
