--- a/test.html
+++ b/test.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="test.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/test.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     </head>
 <body class="body">
 
- <div id= "rechts" class="dropdown">
-      <button class="dropbtn">About Us</button>
-        <div class="dropdown-content">
-            <a style="text-decoration: none; color: white;" href="#">Team</a>
-            <a style="text-decoration: none; color: white;" href="#">Website</a>
+    <div>
+        <div class="Navbar01">
+            <div id="logotest" class="logorunning"> <a href="index.html" style="text-decoration: none;"> <img src="assets/css/runninglogo.jpg" alt="Railrunner Homepage"/> </a> </div>
+            <a href="index.html"><button class="dropbtn extraalingbttn">Travel Planner</button>
+            <a href="BetterABOUT.html"><button class="dropbtn" >About Us</button></a>
         </div>
-</div>
-                        
-<div id= "rechts" Class="contact"> 
-            <a href="file:///Users/RanyaJairi/Desktop/FinalAssignment/railRunner/Ranya01/test.html"><button class="dropbtn" >Contact us</button></a>
-</div>   
+    </div>
+
 
     <div class="container">
             <div style="text-align:center">
@@ -73,13 +70,12 @@ var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 </body>
 
 
+
 <footer class="footer3">
     <div>	
-        <p class="tekstf3">&#169; Copyright 'Onze websitenaam' LLC </p>
+        <p class="tekstf3">&#169; Copyright 'RailRunners' LLC </p>
     </div>
 </footer>
-
-
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
