--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="box2"  > 
                         <div class="boxinkorten" >
                         <h5 class="kopjefooter">API Usage</h5> 
-                        <p class="textbox">RailRunner.com uses the “WIENS API” API to collect the information needed to present you with the most accurate data possible.</p>
+                        <p class="textbox">RailRunner.com uses the OTP (OpenTravelPlanner) API to collect the information needed to present you with the most accurate data possible.</p>
                         </div>
                     </div>
                     <div class="box3"  > 
