--- a/index.html
+++ b/index.html
@@ -156,11 +156,21 @@
                         <div class="footer-items-wrapper maxHeight ">
                             <!-- Begin: Icoontjes in de Footer -->
                             <div>
-                                <a style="text-decoration: none;" target="_blank" href="https://www.facebook.com/"><i style ="font-size:25px" id="icon" class="fab fa-facebook" ></i> </a>
-                                <a style="text-decoration: none;" target="_blank" href="https://www.instagram.com/"><i style ="font-size:25px" id="icon" class="fab fa-instagram" ></i> </a>
+                                <a href="about.html" ><span id= "textFooter">Fernando</span> </a>
+                                <span id= "arrowFooter">
+                                            <i class="fas fa-angle-right "></i>
+                                </span>
+                                <a style="text-decoration: none;" target="_blank" href="https://www.linkedin.com/in/fernando-lasso-pe%C3%B1a-4293b312b/"><i style ="font-size:25px" id="icon" class="fab fa-linkedin" ></i> </a>
+                                <a href="about.html" ><span id= "textFooter">Ranya</span> </a>
+                                <span id= "arrowFooter">
+                                            <i class="fas fa-angle-right "></i>
+                                </span>
+                                <a style="text-decoration: none;" target="_blank" href="https://nl.linkedin.com/in/ranya-jairi-b7697090"><i style ="font-size:25px" id="icon" class="fab fa-linkedin" ></i> </a>
+                                <a href="about.html" ><span id= "textFooter">Salma</span> </a>
+                                <span id= "arrowFooter">
+                                            <i class="fas fa-angle-right "></i>
+                                </span>
                                 <a style="text-decoration: none;" target="_blank" href="https://www.linkedin.com/"><i style ="font-size:25px" id="icon" class="fab fa-linkedin" ></i> </a>
-                                <a style="text-decoration: none;" target="_blank" href="https://twitter.com/"><i style ="font-size:25px" id="icon" class="fab fa-twitter-square" ></i> </a>
-                                <a style="text-decoration: none;" target="_blank" href="https://www.youtube.com/"><i style ="font-size:25px" id="icon" class="fab fa-youtube-square" ></i> </a>
                             </div>
                             <!-- Eind: Icoontjes in de Footer -->
                             <!-- Begin: tekst in Footer -->
