--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                         <div class="card1">
                               <img src="assets/css/aboutsalran.png" alt="Avatar" style="width: 100%;">
                               <div class="container1">
-                                <h4><b>Salma Rassi & Ranya Jaïri</b></h4> 
+                                <h4><b>Salma Rassi & Ranya Jairi</b></h4> 
                                 <p>Hi! Nice to meet you, we are Salma and Ranya. We have been giving the pleasant honor to create the CSS and html structure of this website. We have been working together all the time and have been enjoying the crazy work, we hope you will enjoy the end-result. As this is our first time, we are indeed beginners, we tried to make the best out of it. We started this course while we are both doing our Master: Business Information Management. The course was able to provide us with great hands-on. A journey we will never forget. </p> 
                               </div>
                             </div>
